--- a/Stack_W.html
+++ b/Stack_W.html
@@ -18,7 +18,7 @@
           <h1> Welcom to Stack-WemanConnect</h1>
         </div>
         <div class="in-line" id="search">
-          <p>Please to post a question wrote your ID below</p>
+          <p>Please wrote your ID below to post a question</p>
           <label>Id: </label>
           <input id="primerInput" type="text" />
           <button onclick="post()">Post</button>
